--- a/reset.css
+++ b/reset.css
@@ -1,3 +1,4 @@
+@media screen {
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -53,3 +54,4 @@ table {
     display: table;
 }
 
+}
